# example-consumer-python

./: .gitignore  .python-version  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  trigger_partner_docs_update.yml
src/: consumer.py
tests/consumer/: test_products_consumer.py  test_products_consumer_v3.py
