[tool.poetry]
name = "example-consumer-python"
version = "0.0.0"
description = "Example Python Consumer"
license = "MIT"
authors = ["Matt Fellows <m@onegeek.com.au>", "Yousaf Nabi <you@saf.dev>"]
readme = 'README.md'
repository = "https://github.com/pactflow/example-consumer-python"
homepage = "https://github.com/pactflow/example-consumer-python"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.2"
requests = "2.28.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
pact-python = "^2.2.2"
